# rust-websocket

./: .gitignore  .rustfmt.toml  .travis-gh-pages.sh  .travis.yml  Cargo.toml  LICENSE  README.md  ROADMAP.md  index.html  style.css
autobahn/: client-results.json  fuzzingclient.json  index.html  results.js  server-results.json  style.css
autobahn/client/: index.html  index.json  rust_websocket_case_10_1_1.html  rust_websocket_case_12_1_1.html  rust_websocket_case_12_1_10.html  rust_websocket_case_12_1_11.html  rust_websocket_case_12_1_12.html  rust_websocket_case_12_1_13.html  rust_websocket_case_12_1_14.html  rust_websocket_case_12_1_15.html  rust_websocket_case_12_1_16.html  rust_websocket_case_12_1_17.html  rust_websocket_case_12_1_18.html  rust_websocket_case_12_1_2.html  rust_websocket_case_12_1_3.html  rust_websocket_case_12_1_4.html  rust_websocket_case_12_1_5.html  rust_websocket_case_12_1_6.html  rust_websocket_case_12_1_7.html  rust_websocket_case_12_1_8.html  rust_websocket_case_12_1_9.html  rust_websocket_case_12_2_1.html  rust_websocket_case_12_2_10.html  rust_websocket_case_12_2_11.html  rust_websocket_case_12_2_12.html  rust_websocket_case_12_2_13.html  rust_websocket_case_12_2_14.html  rust_websocket_case_12_2_15.html  rust_websocket_case_12_2_16.html  rust_websocket_case_12_2_17.html  rust_websocket_case_12_2_18.html  rust_websocket_case_12_2_2.html  rust_websocket_case_12_2_3.html  rust_websocket_case_12_2_4.html  rust_websocket_case_12_2_5.html  rust_websocket_case_12_2_6.html  rust_websocket_case_12_2_7.html  rust_websocket_case_12_2_8.html  rust_websocket_case_12_2_9.html  rust_websocket_case_12_3_1.html  (+481 more)
autobahn/server/: index.html  index.json  rust_websocket_case_10_1_1.html  rust_websocket_case_12_1_1.html  rust_websocket_case_12_1_10.html  rust_websocket_case_12_1_11.html  rust_websocket_case_12_1_12.html  rust_websocket_case_12_1_13.html  rust_websocket_case_12_1_14.html  rust_websocket_case_12_1_15.html  rust_websocket_case_12_1_16.html  rust_websocket_case_12_1_17.html  rust_websocket_case_12_1_18.html  rust_websocket_case_12_1_2.html  rust_websocket_case_12_1_3.html  rust_websocket_case_12_1_4.html  rust_websocket_case_12_1_5.html  rust_websocket_case_12_1_6.html  rust_websocket_case_12_1_7.html  rust_websocket_case_12_1_8.html  rust_websocket_case_12_1_9.html  rust_websocket_case_12_2_1.html  rust_websocket_case_12_2_10.html  rust_websocket_case_12_2_11.html  rust_websocket_case_12_2_12.html  rust_websocket_case_12_2_13.html  rust_websocket_case_12_2_14.html  rust_websocket_case_12_2_15.html  rust_websocket_case_12_2_16.html  rust_websocket_case_12_2_17.html  rust_websocket_case_12_2_18.html  rust_websocket_case_12_2_2.html  rust_websocket_case_12_2_3.html  rust_websocket_case_12_2_4.html  rust_websocket_case_12_2_5.html  rust_websocket_case_12_2_6.html  rust_websocket_case_12_2_7.html  rust_websocket_case_12_2_8.html  rust_websocket_case_12_2_9.html  rust_websocket_case_12_3_1.html  (+481 more)
benches/: gen_accept.rs  gen_key.rs  mask_data.rs
doc/: aliases.js  search-index.js
doc/arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html  trait.RangeArgument.html
doc/base64/: all.html  constant.CRYPT.html  constant.MIME.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  enum.LineEnding.html  enum.LineWrap.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
doc/bitflags/: all.html  index.html  macro.bitflags.html
doc/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
doc/bytes/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html  trait.ByteOrder.html  trait.IntoBuf.html
doc/cfg_if/: all.html  index.html  macro.cfg_if.html
doc/crossbeam_deque/: Pop.t.html  all.html  enum.Pop.html  enum.Steal.html  fifo.v.html  fn.fifo.html  fn.lifo.html  index.html  lifo.v.html  struct.Stealer.html  struct.Worker.html
doc/crossbeam_epoch/: all.html  fn.default_collector.html  fn.default_handle.html  fn.is_pinned.html  fn.pin.html  fn.unprotected.html  index.html  struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.Handle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html  trait.Pointer.html
doc/crossbeam_utils/: all.html  index.html  sidebar-items.js  struct.CachePadded.html  trait.AtomicConsume.html
doc/foreign_types/: ForeignTypeRef.t.html  all.html  index.html  macro.foreign_type.html  struct.Opaque.html  trait.ForeignType.html  trait.ForeignTypeRef.html
doc/foreign_types_shared/: ForeignType.t.html  Opaque.t.html  all.html  index.html  struct.Opaque.html  (+2 more)
doc/idna/: all.html  (+5 more)
examples/: async-autobahn-client.rs  async-autobahn-server.rs  async-client.rs  async-server.rs  autobahn-async-client.rs  autobahn-client.rs  autobahn-server.rs  client.rs  client_stress.rs  fuzzingclient.rs  hyper.rs  parallel-server.rs  server.rs  server_robust.rs  ssl-client.rs  websockets.html
scripts/: autobahn-client.sh  autobahn-server.sh  build-all.sh
src/: buffer.rs  client.rs  codec.rs  dataframe.rs  deflate.rs  lib.rs  message.rs  receiver.rs  result.rs  sender.rs  server.rs  stream.rs
websocket-base/: Cargo.toml
websocket-base/src/: dataframe.rs  header.rs  lib.rs  message.rs  result.rs  stream.rs
websocket-base/src/codec/: ws.rs
websocket-base/src/ws/: dataframe.rs  message.rs  mod.rs  receiver.rs  sender.rs
websocket-base/src/ws/util/: header.rs  mask.rs  mod.rs
websocket-codec/: Cargo.toml
websocket-lowlevel/: Cargo.toml
(+11268 files in other folders)
