[package]
name = "websocket"
version = "0.22.4"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]

description = "A WebSocket (RFC6455) library for Rust."

documentation = "https://docs.rs/websocket/"
repository = "https://github.com/websockets-rs/rust-websocket"

readme = "README.md"

keywords = ["websocket", "websockets", "rfc6455", "async", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"

[dependencies]
hyper = "^0.10.6"
unicase = "1.0"
url = "1.0"
bitflags = "1.0.4"
rand = "0.6.1"
byteorder = "1.0"
sha1 = "0.6"
base64 = "0.10.0"
futures = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-tls = { version = "0.2.0", optional = true }
tokio-tcp = { version = "0.1", optional = true }
tokio-codec = { version = "0.1", optional = true }
tokio-reactor = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }
native-tls = { version = "0.2.1", optional = true }

[dev-dependencies]
futures-cpupool = "0.1"

[dev-dependencies.tokio]
version = "0.1"
default-features = false
features = ["codec", "tcp", "rt-full"]

[features]
default = ["sync", "sync-ssl", "async", "async-ssl"]
sync = []
sync-ssl = ["native-tls", "sync"]
async = ["bytes", "futures", "tokio-io", "tokio-tcp", "tokio-reactor", "tokio-codec"]
async-ssl = ["native-tls", "tokio-tls", "async"]
nightly = ["hyper/nightly"]
