[package]
name = "websocket"
version = "0.26.2"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]
edition = "2018"

description = "A WebSocket (RFC6455) library for Rust."

documentation = "https://docs.rs/websocket/"
repository = "https://github.com/websockets-rs/rust-websocket"

readme = "README.md"

keywords = ["websocket", "websockets", "rfc6455", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"

[dependencies]
hyper = "^0.10.6"
unicase = "1.0"
url = "2.2"
rand = "0.7.3"

websocket-base = { path = "websocket-base", version="0.26.0", default-features=false }

[dev-dependencies]
futures-cpupool = "0.1"

[dev-dependencies.tokio]
version = "0.1"
default-features = false
features = ["codec", "tcp", "rt-full"]


[workspace]
members = [
    "websocket-base"
]
