[package]
name = "websocket"
version = "0.27.0"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]
edition = "2018"

description = "[deprecated] A WebSocket (RFC6455) library for Rust."

documentation = "https://docs.rs/websocket/"
repository = "https://github.com/websockets-rs/rust-websocket"

readme = "README.md"

keywords = ["websocket", "websockets", "rfc6455", "async", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"

[dependencies]
hyper = "^0.10.6"
unicase = "1.0"
url = "1.0"
rand = "0.6.1"
futures = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-tls = { version = "0.2.0", optional = true }
tokio-tcp = { version = "0.1", optional = true }
tokio-codec = { version = "0.1", optional = true }
tokio-reactor = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }
native-tls = { version = "0.2.1", optional = true }
websocket-base = { path = "websocket-base", version="0.26.5", default-features=false }

[dev-dependencies]
futures-cpupool = "0.1"

[dev-dependencies.tokio]
version = "0.1"
default-features = false
features = ["codec", "tcp", "rt-full"]

[features]
default = ["sync", "sync-ssl", "async", "async-ssl"]
sync = ["websocket-base/sync"]
sync-ssl = ["native-tls", "sync", "websocket-base/sync-ssl"]
async = ["bytes", "futures", "tokio-io", "tokio-tcp", "tokio-reactor", "tokio-codec", "websocket-base/async"]
async-ssl = ["native-tls", "tokio-tls", "async", "websocket-base/async-ssl"]
nightly = ["hyper/nightly"]

[workspace]
members = [
    "websocket-base"
]
