[package]
name = "websocket-base"
version = "0.26.0"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]
edition = "2018"

description = "A WebSocket (RFC6455) library for Rust: low-level component. It contains HTTP-independent aspect of WebSockets"

documentation = "https://docs.rs/websocket-base/"
repository = "https://github.com/websockets-rs/rust-websocket"

keywords = ["websocket", "websockets", "rfc6455", "async", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"


[dependencies]
byteorder = "1.0"
rand = "0.6.1"
bitflags = "1.0.4"
base64 = "0.10.0"
sha1 = "0.6"
bytes = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
native-tls = { version = "0.2.1", optional = true }
tokio-codec = { version = "0.1", optional = true }
tokio-tls = { version = "0.3.0", optional = true }

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["tcp", "rt-core", "io-util"]
optional = true

[features]
default = ["sync", "async", "sync-ssl", "async-ssl"]
sync = []
sync-ssl = ["native-tls", "sync"]
async = ["tokio-codec", "tokio", "bytes", "futures"]
async-ssl = ["native-tls", "tokio-tls", "async"]
